Removed bbm symbols

--- a/fragments/header.sty
+++ b/fragments/header.sty
@@ -1,26 +1,19 @@
 \ProvidesPackage{shortsym}
 
 % Read the README and docs for descriptions.
-% (c) H. Onur Solmaz 2016
+% (c) Onur Solmaz 2018
 
 % \usepackage{amsmath,amsbsy}
 \usepackage{amsmath}
 \usepackage{amsfonts}
-\usepackage{bbm}
-% \usepackage{bbold}
+% \usepackage{bbm}
 \usepackage{bm}
 
 % \usepackage{unicode-math}
 % \usepackage{upgreek}
 
-\newcommand{\eps}{\epsilon}
-\newcommand{\vareps}{\varepsilon}
-\newcommand{\varthe}{\vartheta}
-
 % The following set of definitions are to help the typesetting of
 % formatted single letters, which are generally used for denoting
 % vectors, tensors etc.
-% These are designed to minimize the number of keystrokes while
-% writing equations
 
 
