--- a/fragments/bbm.sty
+++ b/fragments/bbm.sty
@@ -1,135 +1,135 @@
 % bbm blackboard bold serif
 % \DeclareMathAlphabet{\bbmbboldserif}{U}{bbm}{m}{n}
-\newcommand{\bBA}{\mathbbm{A}}
-\newcommand{\bBB}{\mathbbm{B}}
-\newcommand{\bBC}{\mathbbm{C}}
-\newcommand{\bBD}{\mathbbm{D}}
-\newcommand{\bBE}{\mathbbm{E}}
-\newcommand{\bBF}{\mathbbm{F}}
-\newcommand{\bBG}{\mathbbm{G}}
-\newcommand{\bBH}{\mathbbm{H}}
-\newcommand{\bBI}{\mathbbm{I}}
-\newcommand{\bBJ}{\mathbbm{J}}
-\newcommand{\bBK}{\mathbbm{K}}
-\newcommand{\bBL}{\mathbbm{L}}
-\newcommand{\bBM}{\mathbbm{M}}
-\newcommand{\bBN}{\mathbbm{N}}
-\newcommand{\bBO}{\mathbbm{O}}
-\newcommand{\bBP}{\mathbbm{P}}
-\newcommand{\bBQ}{\mathbbm{Q}}
-\newcommand{\bBR}{\mathbbm{R}}
-\newcommand{\bBS}{\mathbbm{S}}
-\newcommand{\bBT}{\mathbbm{T}}
-\newcommand{\bBU}{\mathbbm{U}}
-\newcommand{\bBV}{\mathbbm{V}}
-\newcommand{\bBW}{\mathbbm{W}}
-\newcommand{\bBX}{\mathbbm{X}}
-\newcommand{\bBY}{\mathbbm{Y}}
-\newcommand{\bBZ}{\mathbbm{Z}}
-\newcommand{\bBa}{\mathbbm{a}}
-\newcommand{\bBb}{\mathbbm{b}}
-\newcommand{\bBc}{\mathbbm{c}}
-\newcommand{\bBd}{\mathbbm{d}}
-\newcommand{\bBe}{\mathbbm{e}}
-\newcommand{\bBf}{\mathbbm{f}}
-\newcommand{\bBg}{\mathbbm{g}}
-\newcommand{\bBh}{\mathbbm{h}}
-\newcommand{\bBi}{\mathbbm{i}}
-\newcommand{\bBj}{\mathbbm{j}}
-\newcommand{\bBk}{\mathbbm{k}}
-\newcommand{\bBl}{\mathbbm{l}}
-\newcommand{\bBm}{\mathbbm{m}}
-\newcommand{\bBn}{\mathbbm{n}}
-\newcommand{\bBo}{\mathbbm{o}}
-\newcommand{\bBp}{\mathbbm{p}}
-\newcommand{\bBq}{\mathbbm{q}}
-\newcommand{\bBr}{\mathbbm{r}}
-\newcommand{\bBs}{\mathbbm{s}}
-\newcommand{\bBt}{\mathbbm{t}}
-\newcommand{\bBu}{\mathbbm{u}}
-\newcommand{\bBv}{\mathbbm{v}}
-\newcommand{\bBw}{\mathbbm{w}}
-\newcommand{\bBx}{\mathbbm{x}}
-\newcommand{\bBy}{\mathbbm{y}}
-\newcommand{\bBz}{\mathbbm{z}}
+\newcommand{\bBA}{{\mathbbm{A}}}
+\newcommand{\bBB}{{\mathbbm{B}}}
+\newcommand{\bBC}{{\mathbbm{C}}}
+\newcommand{\bBD}{{\mathbbm{D}}}
+\newcommand{\bBE}{{\mathbbm{E}}}
+\newcommand{\bBF}{{\mathbbm{F}}}
+\newcommand{\bBG}{{\mathbbm{G}}}
+\newcommand{\bBH}{{\mathbbm{H}}}
+\newcommand{\bBI}{{\mathbbm{I}}}
+\newcommand{\bBJ}{{\mathbbm{J}}}
+\newcommand{\bBK}{{\mathbbm{K}}}
+\newcommand{\bBL}{{\mathbbm{L}}}
+\newcommand{\bBM}{{\mathbbm{M}}}
+\newcommand{\bBN}{{\mathbbm{N}}}
+\newcommand{\bBO}{{\mathbbm{O}}}
+\newcommand{\bBP}{{\mathbbm{P}}}
+\newcommand{\bBQ}{{\mathbbm{Q}}}
+\newcommand{\bBR}{{\mathbbm{R}}}
+\newcommand{\bBS}{{\mathbbm{S}}}
+\newcommand{\bBT}{{\mathbbm{T}}}
+\newcommand{\bBU}{{\mathbbm{U}}}
+\newcommand{\bBV}{{\mathbbm{V}}}
+\newcommand{\bBW}{{\mathbbm{W}}}
+\newcommand{\bBX}{{\mathbbm{X}}}
+\newcommand{\bBY}{{\mathbbm{Y}}}
+\newcommand{\bBZ}{{\mathbbm{Z}}}
+\newcommand{\bBa}{{\mathbbm{a}}}
+\newcommand{\bBb}{{\mathbbm{b}}}
+\newcommand{\bBc}{{\mathbbm{c}}}
+\newcommand{\bBd}{{\mathbbm{d}}}
+\newcommand{\bBe}{{\mathbbm{e}}}
+\newcommand{\bBf}{{\mathbbm{f}}}
+\newcommand{\bBg}{{\mathbbm{g}}}
+\newcommand{\bBh}{{\mathbbm{h}}}
+\newcommand{\bBi}{{\mathbbm{i}}}
+\newcommand{\bBj}{{\mathbbm{j}}}
+\newcommand{\bBk}{{\mathbbm{k}}}
+\newcommand{\bBl}{{\mathbbm{l}}}
+\newcommand{\bBm}{{\mathbbm{m}}}
+\newcommand{\bBn}{{\mathbbm{n}}}
+\newcommand{\bBo}{{\mathbbm{o}}}
+\newcommand{\bBp}{{\mathbbm{p}}}
+\newcommand{\bBq}{{\mathbbm{q}}}
+\newcommand{\bBr}{{\mathbbm{r}}}
+\newcommand{\bBs}{{\mathbbm{s}}}
+\newcommand{\bBt}{{\mathbbm{t}}}
+\newcommand{\bBu}{{\mathbbm{u}}}
+\newcommand{\bBv}{{\mathbbm{v}}}
+\newcommand{\bBw}{{\mathbbm{w}}}
+\newcommand{\bBx}{{\mathbbm{x}}}
+\newcommand{\bBy}{{\mathbbm{y}}}
+\newcommand{\bBz}{{\mathbbm{z}}}
 
-\newcommand{\bBzero }{\mathbbm{0}}
-\newcommand{\bBone  }{\mathbbm{1}}
-\newcommand{\bBtwo  }{\mathbbm{2}}
-\newcommand{\bBthree}{\mathbbm{3}}
-\newcommand{\bBfour }{\mathbbm{4}}
-\newcommand{\bBfive }{\mathbbm{5}}
-\newcommand{\bBsix  }{\mathbbm{6}}
-\newcommand{\bBseven}{\mathbbm{7}}
-\newcommand{\bBeight}{\mathbbm{8}}
-\newcommand{\bBnine }{\mathbbm{9}}
+\newcommand{\bBzero }{{\mathbbm{0}}}
+\newcommand{\bBone  }{{\mathbbm{1}}}
+\newcommand{\bBtwo  }{{\mathbbm{2}}}
+\newcommand{\bBthree}{{\mathbbm{3}}}
+\newcommand{\bBfour }{{\mathbbm{4}}}
+\newcommand{\bBfive }{{\mathbbm{5}}}
+\newcommand{\bBsix  }{{\mathbbm{6}}}
+\newcommand{\bBseven}{{\mathbbm{7}}}
+\newcommand{\bBeight}{{\mathbbm{8}}}
+\newcommand{\bBnine }{{\mathbbm{9}}}
 
 
 % bbm blackboard bold sans
 % \DeclareMathAlphabet{\bbmbboldsans}{U}{bbmss}{m}{n}
-\newcommand{\BBA}{\mathbbmss{A}}
-\newcommand{\BBB}{\mathbbmss{B}}
-\newcommand{\BBC}{\mathbbmss{C}}
-\newcommand{\BBD}{\mathbbmss{D}}
-\newcommand{\BBE}{\mathbbmss{E}}
-\newcommand{\BBF}{\mathbbmss{F}}
-\newcommand{\BBG}{\mathbbmss{G}}
-\newcommand{\BBH}{\mathbbmss{H}}
-\newcommand{\BBI}{\mathbbmss{I}}
-\newcommand{\BBJ}{\mathbbmss{J}}
-\newcommand{\BBK}{\mathbbmss{K}}
-\newcommand{\BBL}{\mathbbmss{L}}
-\newcommand{\BBM}{\mathbbmss{M}}
-\newcommand{\BBN}{\mathbbmss{N}}
-\newcommand{\BBO}{\mathbbmss{O}}
-\newcommand{\BBP}{\mathbbmss{P}}
-\newcommand{\BBQ}{\mathbbmss{Q}}
-\newcommand{\BBR}{\mathbbmss{R}}
-\newcommand{\BBS}{\mathbbmss{S}}
-\newcommand{\BBT}{\mathbbmss{T}}
-\newcommand{\BBU}{\mathbbmss{U}}
-\newcommand{\BBV}{\mathbbmss{V}}
-\newcommand{\BBW}{\mathbbmss{W}}
-\newcommand{\BBX}{\mathbbmss{X}}
-\newcommand{\BBY}{\mathbbmss{Y}}
-\newcommand{\BBZ}{\mathbbmss{Z}}
-\newcommand{\BBa}{\mathbbmss{a}}
-\newcommand{\BBb}{\mathbbmss{b}}
-\newcommand{\BBc}{\mathbbmss{c}}
-\newcommand{\BBd}{\mathbbmss{d}}
-\newcommand{\BBe}{\mathbbmss{e}}
-\newcommand{\BBf}{\mathbbmss{f}}
-\newcommand{\BBg}{\mathbbmss{g}}
-\newcommand{\BBh}{\mathbbmss{h}}
-\newcommand{\BBi}{\mathbbmss{i}}
-\newcommand{\BBj}{\mathbbmss{j}}
-\newcommand{\BBk}{\mathbbmss{k}}
-\newcommand{\BBl}{\mathbbmss{l}}
-\newcommand{\BBm}{\mathbbmss{m}}
-\newcommand{\BBn}{\mathbbmss{n}}
-\newcommand{\BBo}{\mathbbmss{o}}
-\newcommand{\BBp}{\mathbbmss{p}}
-\newcommand{\BBq}{\mathbbmss{q}}
-\newcommand{\BBr}{\mathbbmss{r}}
-\newcommand{\BBs}{\mathbbmss{s}}
-\newcommand{\BBt}{\mathbbmss{t}}
-\newcommand{\BBu}{\mathbbmss{u}}
-\newcommand{\BBv}{\mathbbmss{v}}
-\newcommand{\BBw}{\mathbbmss{w}}
-\newcommand{\BBx}{\mathbbmss{x}}
-\newcommand{\BBy}{\mathbbmss{y}}
-\newcommand{\BBz}{\mathbbmss{z}}
+\newcommand{\BBA}{{\mathbbmss{A}}}
+\newcommand{\BBB}{{\mathbbmss{B}}}
+\newcommand{\BBC}{{\mathbbmss{C}}}
+\newcommand{\BBD}{{\mathbbmss{D}}}
+\newcommand{\BBE}{{\mathbbmss{E}}}
+\newcommand{\BBF}{{\mathbbmss{F}}}
+\newcommand{\BBG}{{\mathbbmss{G}}}
+\newcommand{\BBH}{{\mathbbmss{H}}}
+\newcommand{\BBI}{{\mathbbmss{I}}}
+\newcommand{\BBJ}{{\mathbbmss{J}}}
+\newcommand{\BBK}{{\mathbbmss{K}}}
+\newcommand{\BBL}{{\mathbbmss{L}}}
+\newcommand{\BBM}{{\mathbbmss{M}}}
+\newcommand{\BBN}{{\mathbbmss{N}}}
+\newcommand{\BBO}{{\mathbbmss{O}}}
+\newcommand{\BBP}{{\mathbbmss{P}}}
+\newcommand{\BBQ}{{\mathbbmss{Q}}}
+\newcommand{\BBR}{{\mathbbmss{R}}}
+\newcommand{\BBS}{{\mathbbmss{S}}}
+\newcommand{\BBT}{{\mathbbmss{T}}}
+\newcommand{\BBU}{{\mathbbmss{U}}}
+\newcommand{\BBV}{{\mathbbmss{V}}}
+\newcommand{\BBW}{{\mathbbmss{W}}}
+\newcommand{\BBX}{{\mathbbmss{X}}}
+\newcommand{\BBY}{{\mathbbmss{Y}}}
+\newcommand{\BBZ}{{\mathbbmss{Z}}}
+\newcommand{\BBa}{{\mathbbmss{a}}}
+\newcommand{\BBb}{{\mathbbmss{b}}}
+\newcommand{\BBc}{{\mathbbmss{c}}}
+\newcommand{\BBd}{{\mathbbmss{d}}}
+\newcommand{\BBe}{{\mathbbmss{e}}}
+\newcommand{\BBf}{{\mathbbmss{f}}}
+\newcommand{\BBg}{{\mathbbmss{g}}}
+\newcommand{\BBh}{{\mathbbmss{h}}}
+\newcommand{\BBi}{{\mathbbmss{i}}}
+\newcommand{\BBj}{{\mathbbmss{j}}}
+\newcommand{\BBk}{{\mathbbmss{k}}}
+\newcommand{\BBl}{{\mathbbmss{l}}}
+\newcommand{\BBm}{{\mathbbmss{m}}}
+\newcommand{\BBn}{{\mathbbmss{n}}}
+\newcommand{\BBo}{{\mathbbmss{o}}}
+\newcommand{\BBp}{{\mathbbmss{p}}}
+\newcommand{\BBq}{{\mathbbmss{q}}}
+\newcommand{\BBr}{{\mathbbmss{r}}}
+\newcommand{\BBs}{{\mathbbmss{s}}}
+\newcommand{\BBt}{{\mathbbmss{t}}}
+\newcommand{\BBu}{{\mathbbmss{u}}}
+\newcommand{\BBv}{{\mathbbmss{v}}}
+\newcommand{\BBw}{{\mathbbmss{w}}}
+\newcommand{\BBx}{{\mathbbmss{x}}}
+\newcommand{\BBy}{{\mathbbmss{y}}}
+\newcommand{\BBz}{{\mathbbmss{z}}}
 
-\newcommand{\BBzero }{\mathbbmss{0}}
-\newcommand{\BBone  }{\mathbbmss{1}}
-\newcommand{\BBtwo  }{\mathbbmss{2}}
-\newcommand{\BBthree}{\mathbbmss{3}}
-\newcommand{\BBfour }{\mathbbmss{4}}
-\newcommand{\BBfive }{\mathbbmss{5}}
-\newcommand{\BBsix  }{\mathbbmss{6}}
-\newcommand{\BBseven}{\mathbbmss{7}}
-\newcommand{\BBeight}{\mathbbmss{8}}
-\newcommand{\BBnine }{\mathbbmss{9}}
+\newcommand{\BBzero }{{\mathbbmss{0}}}
+\newcommand{\BBone  }{{\mathbbmss{1}}}
+\newcommand{\BBtwo  }{{\mathbbmss{2}}}
+\newcommand{\BBthree}{{\mathbbmss{3}}}
+\newcommand{\BBfour }{{\mathbbmss{4}}}
+\newcommand{\BBfive }{{\mathbbmss{5}}}
+\newcommand{\BBsix  }{{\mathbbmss{6}}}
+\newcommand{\BBseven}{{\mathbbmss{7}}}
+\newcommand{\BBeight}{{\mathbbmss{8}}}
+\newcommand{\BBnine }{{\mathbbmss{9}}}
 
 
 % % bbm blackboard bold serif italic
